tests/mm0_mmu/fail/bad-sort132.mmu
-- bad modifier order
(sort s132 pure provable strict)